fix: reorder links in createListItemHTML for better accessibility and update color for improved contrast

--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ ul > li > h3 {
   text-transform: uppercase;
   font-weight: 700;
   border-radius: calc(1rem + 1rem);
-  color: oklch(33.364% 0.06934 236.221);
+  color: oklch(94.819% 0.0327 226.44);
 }
 ul li a {
   text-decoration: none;
